--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             { cat: "Software", items: ["React", "Node.js", "JS", "Python"], icon: "globe" },
             { cat: "Hardware", items: ["Arduino", "Embedded C", "Sensors"], icon: "cpu" },
             { cat: "Theory", items: ["DSA", "Operating Systems"], icon: "layers" },
-            { cat: "Tools", items: ["Git", "Postman", "Linux"], icon: "terminal" }
+            { cat: "Tools", items: ["Git", "Microsoft tools", "vs code", "ai"], icon: "terminal" }
         ];
 
         // --- STATE ---
