--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         ];
 
         const projects = [
-            { title: "Eco Track", category: "Web", description: "A community-driven platform rewarding sustainable waste reporting and city cleanliness.", tags: ["React", "Node.js", "MongoDB"], color: "from-emerald-500/20 to-teal-600/20", accent: "text-emerald-500" },
+            { title: "Eco Track", category: "Web", description: "A community-driven platform rewarding sustainable waste reporting and city cleanliness.", tags: ["React", "Node.js", "MongoDB"], link: "https://ecowaste-s3i2.vercel.app", color: "from-emerald-500/20 to-teal-600/20", accent: "text-emerald-500" },
             { title: "DSA Visualizer", category: "Web", description: "Interactive algorithm animations helping students visualize complex data structures.", tags: ["JS", "Canvas", "Algorithms"], link: "https://dsa-visualizer9.netlify.app", color: "from-blue-500/20 to-indigo-600/20", accent: "text-blue-500" },
             { title: "Climate App", category: "Web", description: "A sleek weather dashboard providing real-time meteorological data and forecasts.", tags: ["React", "API", "Tailwind"], link: "https://climate9.netlify.app", color: "from-cyan-500/20 to-blue-600/20", accent: "text-cyan-500" },
             { title: "F1", category: "Web", description: "A high-performance Formula 1 portal tracking live race stats, driver standings, and constructor analysis.", tags: ["React", "RapidAPI", "Tailwind"], link: "https://fowc.netlify.app", color: "from-red-600/20 to-stone-900/20", accent: "text-red-500" },
@@ -394,7 +394,7 @@
             { cat: "Software", items: ["React", "Node.js", "JS", "Python"], icon: "globe" },
             { cat: "Hardware", items: ["Arduino", "Embedded C", "Sensors"], icon: "cpu" },
             { cat: "Theory", items: ["DSA", "Operating Systems"], icon: "layers" },
-            { cat: "Tools", items: ["Git", "Microsoft tools", "vs code", "ai"], icon: "terminal" }
+            { cat: "Tools", items: ["Git", "Microsoft tools", "vs code", "AI"], icon: "terminal" }
         ];
 
         // --- STATE ---
